--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ jspm_packages/
 .vscode/
 !.vscode/tasks.json
 !.vscode/launch.json
+!.vscode/settings.json
 
 # Rush temporary files
 common/deploy/
